<resources>
    <string name="app_name">AppAutenticacionFirebase</string>
    <string name="valtitulo">MULTI LOGIN FIREBASE</string>
    <string name="valetemail">Ingrese su email</string>
    <string name="valetpassword">Ingrese su password</string>
    <string name="valbtnloginfirebase">AUTENTICACIÓN A FIREBASE</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="valactionsalir">Salir</string>
    <string name="facebook_app_id">3415676218540289</string>
    <string name="fb_login_protocol_scheme">fb3415676218540289</string>
    <string name="valbtnlogingit">AUTENTICACIÓN CON GIT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valnavfoto">Foto</string>
    <string name="valnavgaleria">Galeria de fotos</string>
    <string name="valbtntomarfoto">TOMAR FOTO</string>
    <string name="valbtnsubirfoto">SUBIR FOTO A FIREBASE STORAGE</string>
    <string name="valtvtituloreg">REGISTRO PERSONA FIRESTORE</string>
    <string name="valetnompersona">Ingrese nombre</string>
    <string name="valetapepersona">Ingrese apellido</string>
    <string name="valetedadpersona">Ingrese edad</string>
    <string name="valbtnregpersona">REGISTRAR PERSONA</string>
    <string name="valnavregistro">Registro Firestore</string>
    <string name="valnavlista">Lista Firestore</string>


</resources>