<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_fragment_foto"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/valnavfoto" />
        <item
            android:id="@+id/nav_fragment_galeria"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/valnavgaleria" />

        <item
            android:id="@+id/nav_fragment_registro"
            android:icon="@drawable/ic_person_add"
            android:title="@string/valnavregistro" />
        <item
            android:id="@+id/nav_fragment_lista"
            android:icon="@drawable/ic_list"
            android:title="@string/valnavlista" />

    </group>
</menu>