<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_fragment_foto">
    <fragment
        android:id="@+id/nav_fragment_foto"
        android:name="qbo.com.appautenticacionfirebase.FotoFragment"
        android:label="@string/valnavfoto"
        tools:layout="@layout/fragment_foto" />
    <fragment
        android:id="@+id/nav_fragment_galeria"
        android:name="qbo.com.appautenticacionfirebase.GaleriaFragment"
        android:label="@string/valnavgaleria"
        tools:layout="@layout/fragment_galeria" />
    <fragment
        android:id="@+id/nav_fragment_registro"
        android:name="qbo.com.appautenticacionfirebase.RegistroFragment"
        android:label="@string/valnavregistro"
        tools:layout="@layout/fragment_registro" />
    <fragment
        android:id="@+id/nav_fragment_lista"
        android:name="qbo.com.appautenticacionfirebase.ListaPersonaFragment"
        android:label="@string/valnavlista"
        tools:layout="@layout/fragment_lista_persona" />
</navigation>